# Hyperdimensional-Computing

./: .gitignore  README.md  abs_sim.py  hd.py  kmeans.py  pyproject.toml  requirements.txt
