[tool.poetry]
name = "hd-computing"
version = "0.1.0"
description = ""
authors = ["Andy Chen <andy@unnotech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.1.post1"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
